--- a/force-app/main/default/classes/ControladorCrearCaso.cls
+++ b/force-app/main/default/classes/ControladorCrearCaso.cls
@@ -53,6 +53,7 @@ public without sharing class ControladorCrearCaso {
             caso.FS_Area__c = esCore ? 'N1. CORE' : 'N1. OMNIA';
             caso.FS_Carterizacion__c = usuario.Contact.Account.FS_Carterizacion__c;
             caso.FS_CorreosNotificacionesServicios__c = usuario.Contact.Account.FS_CorreosNotificacionesServicios__c;
+            //caso.EntitlementId = CaseTriggerHelper.entitlementCaseId(caso.RecordTypeId);
             if(usuario.Contact.Account.FS_ServicioRemoto__c){
                 caso.OwnerId = [Select Id from Group Where DeveloperName = :usuario.Contact.Account.FS_ColaAtencion__c and Type = 'Queue'].Id;
             }else{
